Temporary commit. (multitab not working yet)

--- a/README.html
+++ b/README.html
@@ -1,4 +1,4 @@
-<h1>WPF.QuickStart - 2014</h1>
+<h1>WPF.QuickStart Caliburn - 2014</h1>
 
 <p><em>Designed by <a href="https://www.linkedin.com/in/nguyendaniel">@Daniel NGUYEN</a></em></p>
 
@@ -6,5 +6,10 @@
 
 <h2>Useful links :</h2>
 
-<p>http://stackoverflow.com/questions/10065000/running-long-tasks-without-freezing-the-ui
+<p>https://github.com/marcemarc/oAuthTwitterTimeline
+http://stackoverflow.com/questions/10065000/running-long-tasks-without-freezing-the-ui
 http://blog.stephencleary.com/2012/02/async-and-await.html</p>
+
+<p>http://www.wpf-tutorial.com/styles/using-styles/</p>
+
+<p>https://caliburnmicro.codeplex.com/wikipage?title=Customizing%20The%20Bootstrapper</p>
