Add WPF.Quickstart.Data project Evol on Twitter views .. Styling ..etc

--- a/README.html
+++ b/README.html
@@ -18,3 +18,8 @@ http://blog.stephencleary.com/2012/02/async-and-await.html</p>
 
 <p>http://stackoverflow.com/questions/21611674/how-to-auto-generate-a-c-sharp-class-file-from-a-json-object-string
 http://json2csharp.com/</p>
+
+<h2>TODO :</h2>
+
+<p>Mise en place de EF + DAL
+Injection avec MEF des services</p>
