Add OxyPlot dll Add MetroChart.dll

--- a/README.html
+++ b/README.html
@@ -16,12 +16,29 @@ http://blog.stephencleary.com/2012/02/async-and-await.html</p>
 
 <p>https://wpftoolkit.codeplex.com/</p>
 
-<p>http://stackoverflow.com/questions/21611674/how-to-auto-generate-a-c-sharp-class-file-from-a-json-object-string
-http://json2csharp.com/</p>
+<p>http://json2csharp.com/
+http://stackoverflow.com/questions/21611674/how-to-auto-generate-a-c-sharp-class-file-from-a-json-object-string</p>
 
 <p>http://stackoverflow.com/questions/833943/watermark-hint-text-placeholder-textbox-in-wpf</p>
 
+<p>https://modernuicharts.codeplex.com</p>
+
+<p>https://github.com/oxyplot/oxyplot</p>
+
 <h2>TODO :</h2>
 
-<p>Mise en place de EF + DAL
-Injection avec MEF des services</p>
+<ul>
+<li>Setup Data layer with Entity Framework</li>
+<li>Inject IOC for Services using MEF</li>
+</ul>
+
+<h2>Installation Notes</h2>
+
+<p><strong>Server side Console</strong>: </p>
+
+<p>Launch the server side project executable.</p>
+
+<p><strong>Client Side UI</strong>:</p>
+
+<p>Launch the client.
+In order to be allowed connection and retrieved data, the server console must be started.</p>
